<resources>
    <string name="app_name">JobPill</string>
    <string name="sign_up_full_name">Full Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="sign_up_pass">Password</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_conf_pass">Confirm Password</string>
    <string name="dialog_title">Choose Job Interests</string>
    <string name="lbl_dialog_ok">OK</string>
    <string name="lbl_dialog_dismiss">Dismiss</string>
    <string name="lbl_dialog_clearall">Clear all</string>
    <string name="job_instructions">Job Instructions</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="instructions">Instructions</string>
    <string name="location">Location</string>
    <string name="next">Next</string>
    <string name="cancel2">Cancel</string>
    <string name="job_title">Job Title</string>
    <string name="payment">Payment</string>
    <string name="description">Description</string>
    <string name="job_images">Job Images</string>
    <string name="category">Category</string>
    <string name="job_image_2">Job Image 2</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="todo">TODO</string>
    <string name="jobs">Jobs</string>
    <string name="reset_password">Reset Password</string>
    <string name="btn_hire">Hire Applicant</string>

    <string name="API_KEY">AIzaSyDJyQn4NwgP2-P-_U-GXQVypjDyCcxioQY</string>

    <string-array name="interest_categories">
        <item>Plumbing</item>
        <item>Moving</item>
        <item>Painting</item>
        <item>Repair Work</item>
        <item>Cleaning</item>
        <item>Gardening</item>
    </string-array>

    <string-array name="post_interest_categories">
        <item>Select Category</item>
        <item>Plumbing</item>
        <item>Moving</item>
        <item>Painting</item>
        <item>Repair Work</item>
        <item>Cleaning</item>
        <item>Gardening</item>
        <item>Other</item>
    </string-array>

    <string-array name="filter_categories">
        <item>Select Category</item>
        <item>Plumbing</item>
        <item>Moving</item>
        <item>Painting</item>
        <item>Repair Work</item>
        <item>Cleaning</item>
        <item>Gardening</item>
        <item>Other</item>
    </string-array>

    <string-array name="pay_filters">
        <item>Select Pay Filter</item>
        <item>$0-$100</item>
        <item>$100-$500</item>
        <item>$500+</item>
    </string-array>
</resources>
